base do tratamento de erros